--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,11 +26,14 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps:
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_PASSWORD }}
+
       - name: Pull image from docker hub
         run: docker pull jettiworks/next-chatbot:latest
 
       - name: remove old container
-        run: docker rm -f chatbot-container
+        run: docker rm -f chatbot-container || true
 
       - name: Run docker container
         run: docker run -d -p 3000:3000 --name chatbot-container jettiworks/next-chatbot
